<resources>
    <string name="app_name" translatable="false">VARKYNTHPlayer</string>
    <!-- texts -->
    <string name="text_quick_settings">Additional quick settings</string>
    <string name="text_quick_settings_button">Settings</string>
    <string name="set_language">Set language</string>
    <string name="dismiss">Dismiss</string>
    <string name="ok">Okay</string>
    <string name="donate">Donate</string>
    <string name="update_text">Update</string>
    <string name="delete">Delete</string>
    <string name="about">About</string>
    <string name="gratitude">Thanks for the contribution to the project</string>
    <string name="developer_anna">Anna contribution to development - design</string>
    <string name="developer_synorix">VARKYNTH contribution to development - everything else</string>
    <string name="logupdate">Log Update</string>
    <string name="audio_settings">Audio Settings</string>
    <string name="soon">Soon...</string>
    <string name="FX">FX</string>
    
    <string name="dialog_language_title">Select Language</string>
    <string name="dialog_language_english">English</string>
    <string name="dialog_language_russian">Russian</string>
</resources>