<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:orientation="vertical">
	<com.google.android.material.card.MaterialCardView
		android:id="@+id/c1"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		app:contentPadding="8dp"
		app:cardBackgroundColor="?colorSurface"
		app:cardElevation="10dp"
		app:cardCornerRadius="20dp"
        app:strokeWidth="1dp"
                app:strokeColor="?attr/colorOutline">
		<LinearLayout
			android:id="@+id/l1"
			android:layout_width="match_parent"
			android:layout_height="match_parent"
			android:orientation="vertical">
			<com.google.android.material.textview.MaterialTextView
				android:id="@+id/t1"
				android:focusable="false"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:padding="8dp"
				android:text="@string/text_quick_settings"
				android:textSize="14sp"
				android:textStyle="bold"
				android:textColor="?colorOnSurface" />
			<com.google.android.material.card.MaterialCardView
				android:id="@+id/c2"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_marginTop="5dp"
				android:layout_marginBottom="5dp"
				app:contentPadding="8dp"
				app:cardBackgroundColor="?colorOnSurfaceInverse"
				app:cardElevation="20dp"
				app:cardCornerRadius="20dp">
				<com.google.android.material.textview.MaterialTextView
					android:id="@+id/t2"
					android:focusable="false"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:padding="8dp"
					android:text="@string/text_quick_settings_button"
					android:textSize="12sp"
					android:textStyle="bold"
					android:textColor="?colorOnSurface" />
			</com.google.android.material.card.MaterialCardView>
			<com.google.android.material.card.MaterialCardView
				android:id="@+id/c3"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_marginTop="5dp"
				android:layout_marginBottom="5dp"
				app:contentPadding="8dp"
				app:cardBackgroundColor="?colorOnSurfaceInverse"
				app:cardElevation="20dp"
				app:cardCornerRadius="20dp">
				<com.google.android.material.textview.MaterialTextView
					android:id="@+id/t3"
					android:focusable="false"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:padding="8dp"
					android:text="@string/donate"
					android:textSize="12sp"
					android:textStyle="bold"
					android:textColor="?colorOnSurface" />
			</com.google.android.material.card.MaterialCardView>
			<com.google.android.material.card.MaterialCardView
				android:id="@+id/c4"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_marginTop="5dp"
				android:layout_marginBottom="5dp"
				app:contentPadding="8dp"
				app:cardBackgroundColor="?colorOnSurfaceInverse"
				app:cardElevation="20dp"
				app:cardCornerRadius="20dp">
				<com.google.android.material.textview.MaterialTextView
					android:id="@+id/t4"
					android:focusable="false"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:padding="8dp"
					android:text="@string/about"
					android:textSize="12sp"
					android:textStyle="bold"
					android:textColor="?colorOnSurface" />
			</com.google.android.material.card.MaterialCardView>
		</LinearLayout>
	</com.google.android.material.card.MaterialCardView>
</LinearLayout>
