<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:orientation="vertical"
	android:background="?colorSurface"
    tools:context=".VARTHAboutActivity">
	<include
        android:id="@+id/topbarother"
        layout="@layout/topbarother"
        android:visibility="visible"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_collapseMode="pin"
        android:fitsSystemWindows="true" />
	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:padding="8dp"
		android:background="?colorSurface"
		android:gravity="center_horizontal|center_vertical"
		android:orientation="vertical">
		<ImageView
			android:layout_width="100dp"
			android:layout_height="100dp"
			android:src="@drawable/ic_logo"
			android:scaleType="centerInside" />
		<com.google.android.material.textview.MaterialTextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:padding="8dp"
			android:text="@string/app_name"
			android:textSize="14sp"
			android:textStyle="bold" />
		<com.google.android.material.textview.MaterialTextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:padding="8dp"
			android:text="Copyright © 2025 by VARKYNTH"
			android:textSize="12sp"
			android:textStyle="bold"
			android:textColor="?colorError" />
		<com.google.android.material.card.MaterialCardView
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			app:cardBackgroundColor="?colorOnSurfaceInverse"
			app:cardElevation="10dp"
			app:cardCornerRadius="20dp">
			<LinearLayout
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:padding="8dp"
				android:orientation="vertical">
				<com.google.android.material.textview.MaterialTextView
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:padding="8dp"
					android:text="@string/gratitude"
					android:textSize="14sp"
					android:textStyle="bold" />
				<com.google.android.material.card.MaterialCardView
                android:id="@+id/dev_owner_click"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:layout_marginTop="5dp"
					android:layout_marginBottom="5dp"
					app:cardElevation="10dp"
					app:cardCornerRadius="20dp">
					<LinearLayout
						android:layout_width="match_parent"
						android:layout_height="wrap_content"
						android:padding="8dp"
						android:background="@android:color/transparent"
						android:gravity="center_horizontal|center_vertical"
						android:orientation="horizontal">
						<ImageView
							android:layout_width="40dp"
							android:layout_height="40dp"
							android:src="@drawable/ic_telegram"
							android:scaleType="centerInside" />
						<com.google.android.material.textview.MaterialTextView
							android:layout_width="wrap_content"
							android:layout_height="wrap_content"
							android:padding="8dp"
							android:text="@string/developer_synorix"
							android:textSize="12sp"
							android:textStyle="bold"
							android:layout_weight="1" />
					</LinearLayout>
				</com.google.android.material.card.MaterialCardView>
				<com.google.android.material.card.MaterialCardView
                android:id="@+id/dev_anna_click"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:layout_marginTop="5dp"
					android:layout_marginBottom="5dp"
					app:cardElevation="10dp"
					app:cardCornerRadius="20dp">
					<LinearLayout
						android:layout_width="match_parent"
						android:layout_height="wrap_content"
						android:padding="8dp"
						android:gravity="center_horizontal|center_vertical"
						android:orientation="horizontal">
						<ImageView
							android:layout_width="40dp"
							android:layout_height="40dp"
							android:src="@drawable/ic_instagram"
							android:scaleType="centerInside" />
						<com.google.android.material.textview.MaterialTextView
							android:layout_width="wrap_content"
							android:layout_height="wrap_content"
							android:padding="8dp"
							android:text="@string/developer_anna"
							android:textSize="12sp"
							android:textStyle="bold"
							android:layout_weight="1" />
					</LinearLayout>
				</com.google.android.material.card.MaterialCardView>
			</LinearLayout>
		</com.google.android.material.card.MaterialCardView>
	</LinearLayout>
</LinearLayout>