<?xml version="1.0" encoding="UTF-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="?colorSurface"
    tools:context=".VARTHSettingsActivity">
    <include
        android:id="@+id/topbarother"
        layout="@layout/topbarother"
        android:visibility="visible"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_collapseMode="pin"
        android:fitsSystemWindows="true" />
    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="top|bottom"
            android:orientation="vertical">
            <com.google.android.material.card.MaterialCardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                app:cardBackgroundColor="?colorSurface"
                app:cardElevation="10dp"
                app:cardCornerRadius="20dp"
                app:strokeWidth="1dp"
                app:strokeColor="?attr/colorOutline">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="8dp"
                    android:background="?colorSurface"
                    android:orientation="vertical">
                    <com.google.android.material.textview.MaterialTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="8dp"
                        android:text="@string/audio_settings"
                        android:textSize="16sp" />
                    <com.google.android.material.card.MaterialCardView
                        android:id="@+id/fx_card"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:contentPadding="8dp"
                        app:cardBackgroundColor="?colorOnSurfaceInverse"
                        app:cardElevation="10dp"
                        app:cardCornerRadius="20dp">
                        <com.google.android.material.textview.MaterialTextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:padding="8dp"
                            android:text="@string/FX"
                            android:textSize="12sp" />
                    </com.google.android.material.card.MaterialCardView>
                </LinearLayout>
            </com.google.android.material.card.MaterialCardView>
            <com.google.android.material.card.MaterialCardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                app:cardBackgroundColor="?colorSurface"
                app:cardElevation="10dp"
                app:cardCornerRadius="20dp"
                app:strokeWidth="1dp"
                app:strokeColor="?attr/colorOutline">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="8dp"
                    android:background="?colorSurface"
                    android:orientation="vertical">
                    <com.google.android.material.textview.MaterialTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="8dp"
                        android:text="@string/text_quick_settings_button"
                        android:textSize="16sp" />
                    <com.google.android.material.card.MaterialCardView
                        android:id="@+id/t_language"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:contentPadding="8dp"
                        app:cardBackgroundColor="?colorOnSurfaceInverse"
                        app:cardElevation="10dp"
                        app:cardCornerRadius="20dp">
                        <com.google.android.material.textview.MaterialTextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:padding="8dp"
                            android:text="@string/set_language"
                            android:textSize="12sp" />
                    </com.google.android.material.card.MaterialCardView>
                </LinearLayout>
            </com.google.android.material.card.MaterialCardView>
            <com.google.android.material.card.MaterialCardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                app:cardBackgroundColor="?colorSurface"
                app:cardElevation="8dp"
                app:cardCornerRadius="20dp"
                app:strokeWidth="1dp"
                app:strokeColor="?attr/colorOutline">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="8dp"
                    android:background="?colorSurface"
                    android:orientation="vertical">
                    <com.google.android.material.textview.MaterialTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="8dp"
                        android:text="Settings Experimental"
                        android:textSize="16sp" />
                    <com.google.android.material.card.MaterialCardView
                        android:id="@+id/ide_card"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:contentPadding="8dp"
                        app:cardBackgroundColor="?colorOnSurfaceInverse"
                        app:cardElevation="10dp"
                        app:cardCornerRadius="20dp">
                        <com.google.android.material.textview.MaterialTextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:padding="8dp"
                            android:text="Settings Experimental"
                            android:textSize="12sp" />
                    </com.google.android.material.card.MaterialCardView>
                </LinearLayout>
            </com.google.android.material.card.MaterialCardView>
            <com.google.android.material.card.MaterialCardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                app:cardCornerRadius="20dp"
                app:cardElevation="8dp"
                app:cardBackgroundColor="?colorSurface"
                app:strokeWidth="1dp"
                app:strokeColor="?attr/colorOutline">
                <LinearLayout
                    android:orientation="vertical"
                    android:padding="16dp"
                    android:background="?colorSurface"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/titleAppearance"
                        android:text="Appearance"
                        android:textSize="18sp"
                        android:padding="8dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                    <com.google.android.material.card.MaterialCardView
                        android:id="@+id/ide_card"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:contentPadding="8dp"
                        app:cardBackgroundColor="?colorOnSurfaceInverse"
                        app:cardElevation="10dp"
                        app:cardCornerRadius="20dp">
                        <RadioGroup
                            android:id="@+id/groupTheme"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">
                            <com.google.android.material.radiobutton.MaterialRadioButton
                                android:id="@+id/rbSystem"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="System" />
                            <com.google.android.material.radiobutton.MaterialRadioButton
                                android:id="@+id/rbLight"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="light" />
                            <com.google.android.material.radiobutton.MaterialRadioButton
                                android:id="@+id/rbDark"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="Dark" />
                        </RadioGroup>
                    </com.google.android.material.card.MaterialCardView>
                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/btnApplyTheme"
                        android:text="Apply"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>
                </LinearLayout>
            </com.google.android.material.card.MaterialCardView>
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</LinearLayout>